adding roots and some html elements

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,8 @@
     border: none;
 }
 body{
-    background: var(--primary);
+    background: var(--Neutral_Light);
+    font-family: 'Poppins', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
