--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,6 +109,8 @@ nav {
   align-items: center;
   justify-content: space-between;
   background-color: var(--Neutral_Light);
+  position: relative;
+  z-index: 1000;
 }
 .logo a {
   display: flex;
@@ -116,6 +118,11 @@ nav {
   gap: 0.5rem;
   font-weight: 600;
   color: var(--text_color);
+}
+.logo{
+  position: relative;
+  z-index: 1000
+  ;
 }
 
 .logo img {
@@ -132,11 +139,10 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center ;
-  flex-direction: column;
   gap: 32px;
-  background-color: var(--Neutral_Light);
+  /* background-color: var(--Neutral_Light); */
   transition: 0.5s;
-  z-index: -1;
+  z-index: 1001;
   transform: translateY(-100%);
 
 }
