--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,7 +64,7 @@ body {
   border: none;
   font-size: 17.6px;
   white-space: nowrap;
-  background: var(--primary);
+  background-color: var(--primary);
   color: #fff;
   border-radius: 5px;
   cursor: pointer;
@@ -100,7 +100,7 @@ nav {
   position: fixed;
   isolation: isolate;
   width: 100%; 
-  z-index: 10;
+  z-index: 9;
 }
 .nav_header {
   padding: 16px;
@@ -109,23 +109,22 @@ nav {
   align-items: center;
   justify-content: space-between;
   background-color: var(--Neutral_Light);
-  position: relative;
-  z-index: 1000;
+  
 }
-.logo a {
+.nav_logo a {
   display: flex;
   align-items: center;
   gap: 0.5rem;
   font-weight: 600;
   color: var(--text_color);
 }
-.logo{
+/* .logo{
   position: relative;
   z-index: 1000
   ;
-}
+} */
 
-.logo img {
+.nav_logo img {
   max-width: 40px;
 }
 
@@ -139,10 +138,11 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center ;
+  flex-direction: column;
   gap: 32px;
   /* background-color: var(--Neutral_Light); */
   transition: 0.5s;
-  z-index: 1001;
+  z-index: -1;
   transform: translateY(-100%);
 
 }
