--- a/styles/styles.css
+++ b/styles/styles.css
@@ -338,6 +338,16 @@ padding: 32px 16px;
 .trainer_content p{
   margin-block: 16px;
   color: var(--Neutral_Dark);
-  font-size: 16px;
-  line-height: 1.8;
+
+}
+
+.trainer_socials{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.trainer_socials a{
+  font-size: 20px;
+  color: var(--Neutral_Dark);
+  transition: 0.3s;
 }
