--- a/styles/styles.css
+++ b/styles/styles.css
@@ -445,3 +445,33 @@ nav {
 /* .plan {
   color: var(--primary);
 } */
+
+.swiper {
+  margin-top: 32px;
+  padding-bottom: 32px;
+  width: 100%;
+
+}
+.swiper_slide{
+  max-width: 500px;
+padding-inline: 16px;
+padding-top: 4rem;
+}
+
+.client_card{
+  position:relative;
+  padding-block:4rem 2rem;
+  padding-inline: 32px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  
+}
+.client_card img{
+  position:absolute;
+  top:0 ;
+  left:32px ;
+  transform:translateX(-50%);
+  max-width:80px;
+  border-radius: 100%;
+  border:4px solid var(--Neutral_Light);
+}
