--- a/styles/styles.css
+++ b/styles/styles.css
@@ -470,8 +470,28 @@ padding-top: 4rem;
   position:absolute;
   top:0 ;
   left:32px ;
-  transform:translateX(-50%);
+  transform:translateY(-50%);
   max-width:80px;
   border-radius: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border:4px solid var(--Neutral_Light);
+}
+.client-ratings{
+  margin-bottom: 16px;
+  color: var(--Accent);
+}
+.client_card p{
+  margin-bottom: 16px;
+  color: var(--Neutral_Dark);
+  line-height: 1.8;
+}
+.client_card h4{
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--text_color);
+}
+.client_card h5{
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--Neutral_Dark);
 }
