--- a/styles/styles.css
+++ b/styles/styles.css
@@ -365,7 +365,7 @@ nav {
 }
 .price_card {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   background-color: var(--Neutral_Light);
   padding: 32px 16px;
   text-align: center;
@@ -397,14 +397,13 @@ nav {
   flex: 1;
   margin-inline: auto;
   margin-bottom: 16px;
-
 }
 .price_content img {
   max-width: 70px;
   margin-bottom: 16px;
 }
 
-.price_content p{
+.price_content p {
   margin-bottom: 16px;
   color: var(--Neutral_Dark);
 }
@@ -416,7 +415,7 @@ nav {
   margin-bottom: 16px;
 }
 
-.price_content hr{
+.price_content hr {
   margin-bottom: 16px;
   border: 0.5px solid var(--primary);
 }
@@ -450,48 +449,53 @@ nav {
   margin-top: 32px;
   padding-bottom: 32px;
   width: 100%;
-
 }
-.swiper_slide{
+.swiper-slide {
   max-width: 500px;
-padding-inline: 16px;
-padding-top: 4rem;
+  padding-inline: 16px;
+  padding-top: 4rem;
 }
 
-.client_card{
-  position:relative;
-  padding-block:4rem 2rem;
+.client_card {
+  position: relative;
+  padding-block: 4rem 2rem;
   padding-inline: 32px;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  
 }
-.client_card img{
-  position:absolute;
-  top:0 ;
-  left:32px ;
-  transform:translateY(-50%);
-  max-width:80px;
+.client_card img {
+  position: absolute;
+  top: 0;
+  left: 32px;
+  transform: translateY(-50%);
+  max-width: 80px;
   border-radius: 100%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border:4px solid var(--Neutral_Light);
 }
-.client-ratings{
+.client_rating {
   margin-bottom: 16px;
-  color: var(--Accent);
+  color:var(--Accent);
 }
-.client_card p{
+.client_card p {
   margin-bottom: 16px;
   color: var(--Neutral_Dark);
   line-height: 1.8;
 }
-.client_card h4{
+.client_card h4 {
   font-size: 20px;
   font-weight: 600;
   color: var(--text_color);
 }
-.client_card h5{
+.client_card h5 {
   font-size: 16px;
   font-weight: 500;
   color: var(--Neutral_Dark);
+}
+
+.swiper-wrapper {
+  display: flex;
+}
+
+.swiper-slide {
+  flex-shrink: 0;
 }
