modifier la couleur de fond du pied de page pour utiliser la couleur primaire

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -503,7 +503,7 @@ nav {
 /* footer */
 
 .footer {
-  background-color: var(--Secondary);
+  background-color: var(--primary );
   color: var(--Neutral_Light);
   padding: 2rem 1rem;
 }
