--- a/styles/styles.css
+++ b/styles/styles.css
@@ -644,7 +644,7 @@ nav {
     gap: 32px 16px;
   }
   .footer_container {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 4, 1fr;
   }
   
 }
