styling the recent project sct and add some measuremnt to the section

--- a/styles/style.css
+++ b/styles/style.css
@@ -244,3 +244,17 @@ header {
     grid-column: span 1;
   }
 }
+
+/* recent project section */
+
+.recent-projects {
+  max-width: 1200px;
+  margin: 120px auto;
+  text-align: center;
+  padding: 0 20px;
+}
+.recent-projects h2 {
+  font-size: 1.8rem;
+  color: #fff;
+  margin-bottom: 50px;
+}
